@startuml "Full"

interface ISyntaxValidator <<interface>> {
    +event CompileError: EventHandler<SyntaxErrorEventArgs>
    +HasErrors: bool
    +Validate(scriptText: string): void
}

class SyntaxValidator implements ISyntaxValidator {
    +CompileError: EventHandler<SyntaxErrorEventArgs>
    +HasErrors: bool
    +Validate(scriptText: string): void
}

class SyntaxErrorEventArgs {
    +Line: int
    +Column: int
    +Message: string
    +OffendingSymbol: string
    +Location: string
    +SyntaxErrorEventArgs(location: string, line: int, column: int, offendingSymbol: string, message: string)
    +SyntaxErrorEventArgs(exception: Exception)
}

SyntaxValidator ..> SyntaxErrorEventArgs
ISyntaxValidator ..> SyntaxErrorEventArgs
@enduml
